package omsu.imit;


import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class OfdAppApplication {

	public static void main(String[] args) {
		SpringApplication.run(OfdAppApplication.class, args);
	}
}
