@startuml

title __IMIT's Class Diagram__\n

  namespace omsu.imit {
    class omsu.imit.BaseInitializer {
        - LOGGER : Logger
        - inn : String[]
        - login : String
        - password : String
        - startDate : String
        + BaseInitializer()
        + BaseInitializer()
        + init()
    }
  }
  

  namespace omsu.imit {
    class omsu.imit.LocalDateTimeDeserializer {
        + deserialize()
    }
  }
  

  namespace omsu.imit {
    class omsu.imit.LocalDateTimeSerializer {
        + serialize()
    }
  }
  

  namespace omsu.imit {
    class omsu.imit.MySQLCustomDialect {
        + getTableTypeString()
    }
  }
  

  namespace omsu.imit {
    class omsu.imit.OfdAppApplication {
        {static} + main()
    }
  }
  

  omsu.imit.BaseInitializer o-- omsu.imit.controllers.ShiftController : shiftController
  omsu.imit.LocalDateTimeDeserializer -up-|> com.fasterxml.jackson.databind.JsonDeserializer
  omsu.imit.LocalDateTimeSerializer -up-|> com.fasterxml.jackson.databind.JsonSerializer
  omsu.imit.MySQLCustomDialect -up-|> org.hibernate.dialect.MySQL57Dialect


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
